# th1

./: .gitignore  LICENSE  README.md  setup.cfg
.devcontainer/: devcontainer.json
test/: test_schema.py
th1/client/: __main__.py  client.py  constant.py
th1/client/schema/: auth.py  smartphone.py  thermostat.py
