[metadata]
name = th1
author = gvne
author_email = guillaume.vincke@gmail.com
description = Somfy connected thermostat api client
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10

[options.package_data]
th1 = py.typed

[options.packages.find]
include = 
    th1*
exclude =
    test*
